--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -1929,4 +1929,24 @@ config RTC_DRV_WILCO_EC
 	  This can also be built as a module. If so, the module will
 	  be named "rtc_wilco_ec".
 
+config RTC_DRV_ISL12057
+	select REGMAP_I2C
+	tristate "Intersil ISL12057"
+	help
+	  If you say yes here you get support for the Intersil ISL12057
+	  I2C RTC chip.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called rtc-isl12057.
+
+config RTC_DRV_ISL12058
+	select REGMAP_I2C
+	tristate "Intersil ISL12058"
+	help
+	  If you say yes here you get support for the Intersil ISL12058
+	  I2C RTC chip.
+
+	  This driver can also be built as a module. If so, the module
+	  will be called rtc-isl12058.
+
 endif # RTC_CLASS
