--- a/arch/arm/boot/dts/imx6ul-imx6ull-var-som-wiv2-board.dtsi
+++ b/arch/arm/boot/dts/imx6ul-imx6ull-var-som-wiv2-board.dtsi
@@ -396,7 +396,8 @@
 };
 */
 
-/* SPI STM 32 : Master with Slave-Ready GPIO */
+/* SPI STM 32 : Master with Slave-Ready GPIO
+ * look for spi_imx and spi_bitbang controller */
 &ecspi4 {
 	/*fsl,spi-num-chipselects = <1>;
 	cs-gpios = <&gpio2 15 0>;*/
@@ -404,6 +405,7 @@
 	pinctrl-0 = <&pinctrl_ecspi4>;
 	/*#address-cells = <0>;
 	spi-slave;*/
+	spi-realtime;
 	status = "okay";
 	sready-gpios = <&gpio2 15 GPIO_ACTIVE_LOW>;
 
